# TWPatentDatabase

./: .gitignore  README.MD  docker-compose.yaml  main.py  req.txt
Backend/: .gitignore  README.MD  main.py  pyproject.toml  scraper.py
Backend/application/: authorization.py  history.py  report.py  search.py
Backend/application/auth/: authorization.py
Backend/application/dependency/: dependency.py
Backend/application/dev/: dev.py
Backend/application/history/: history.py
Backend/application/report/: report.py
Backend/application/response/: response.py
Backend/application/result/: result.py
Backend/application/search/: search.py
Backend/utility/error/: common.py  database.py  scraper.py
Backend/utility/error/database/: database.py
Backend/utility/error/dependency/: dependency.py
Backend/utility/error/llm/: llm.py
Backend/utility/handler/: database.py  embdeeing.py  embedding.py  feature_extractor.py  log_handler.py  pdf_extractor.py  scraper.py  vector_database.py
Backend/utility/handler/database/: authorization.py  database.py  dependency.py  history.py  result.py  scraper.py  search.py
Backend/utility/handler/llm/: llm.py  prompt.py
Backend/utility/model/application/: history.py  result.py  search.py
Backend/utility/model/application/auth/: authorization.py  user.py
Backend/utility/model/application/dependency/: dependency.py
Backend/utility/model/handler/: database.py  llm.py  scraper.py  vector_database.py
Backend/utility/model/handler/database/: database.py  scheme.py
Frontend/: next.config.js  package-lock.json  package.json  (+1 more)
(+38 files in other folders)
