[project]
name = "twpatentdatabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.11",
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.10",
    "selenium>=4.29.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "ERA001", "FA"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
